# inbox-triage-assistant

./: .env.example  .vercelignore  main.py  pyproject.toml  requirements.txt  run_web.py  setup_instructions.md  vercel.json
api/: index.py
src/inbox_triage/: cli.py  demo_data.py  email_clusterer.py  gmail_client.py  main.py  web_app.py
src/inbox_triage/templates/: index.html
